deployment/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  template:
    metadata:
      name: auth
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: vwnunes/tech-challenge-61-auth:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /auth-volume
              name: auth-volume
      volumes:
        - name: auth-volume
          hostPath:
            path: /home/auth-volume
            type: DirectoryOrCreate
  replicas: 2
  selector:
    matchLabels:
      app: auth
