deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  template:
    metadata:
      name: auth
      labels:
        app: auth
    spec:
      serviceAccountName: auth-sa
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: auth-secrets
        - name: auth-volume
          hostPath:
            path: /home/auth-volume
            type: DirectoryOrCreate
      containers:
        - name: auth
          image: vwnunes/tech-challenge-61-auth:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: auth-volume
              mountPath: /mnt/auth-volume
            - name: secrets-store-inline
              mountPath: "/mnt/auth-secrets"
              readOnly: true
  replicas: 2
  selector:
    matchLabels:
      app: auth
